# szip

./: .project  CMakeLists.txt  OCMS-post.cmake  OCMS-pre.cmake  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt
